# ftmalloc

./: .gitignore  CMakeLists.txt  Makefile  README.md  malloc  rebuild-Release.sh  rebuild.sh  test.sh
eval/: bonus_calloc.c  bonus_check_heap.c  bonus_scribble.c  bonus_show_mem_ex.c  test5.c
include/: ftmalloc.h
libft/: CMakeLists.txt
libft/ftio/: ft_putaddress.c  ft_putnbr.c  ftio.mk
libft/include/: libft.h
src/: deleteme.c  ftcalloc.c  ftfree.c  ftmalloc.c  ftmalloc_bin.c  ftmalloc_buddy.c  ftmalloc_check_heap.c  ftmalloc_check_heap_fully.c  ftmalloc_check_heap_relaxed.c  ftmalloc_chunk.c  ftmalloc_common.c  ftmalloc_decl.h  ftmalloc_free.c  ftmalloc_init.c  ftmalloc_internal.h  ftmalloc_malloc.c  ftmalloc_posix.c  ftmalloc_realloc.c  ftmalloc_reserve_mem.c  ftmalloc_show_mem.c  ftmalloc_windows_adaptor.c  ftmalloc_windows_adaptor.h  ftrealloc.c  src.mk
src/buddy/: buddy.mk  buddy_deoccupy.c  buddy_merge.c  buddy_occupy.c
src/chunk/: chunk.mk  chunk_adj.c  chunk_arrange.c  chunk_bin_of.c  chunk_freed.c  chunk_in_use.c  chunk_mem.c  chunk_prev_in_use.c  chunk_size.c  chunk_verify.c
src/mem/: allocate.c  mem.mk  mem_allocate.c  mem_deallocate.c  mem_find.c  mem_inpool.c  mem_lookup.c  mem_reserve.c  reserve.c
src/realloc/: realloc.mk  realloc_try_grow.c  realloc_try_shrink.c
src/show_mem/: show_mem.mk  show_mem_bin.c  show_mem_chunk.c  show_mem_chunk_ex.c
test/: calloc.cpp  env_check_heap.cpp  env_scribble.cpp  error.cpp  eval.cpp  main.cpp  malloc.cpp  malloctest.h  mt.cpp  mt_realloc.cpp  realloc.cpp
